Fixed #285 new command "empty container".
Also made all item commands implement ItemCommand for ease of reference.